Add Applications page, add tasks, set up dummy API

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 html,
 body {
+  color-scheme: dark;
   margin: 0;
   padding: 0;
+  background: black;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -14,16 +17,10 @@ a:hover {
   text-decoration: underline;
 }
 
-* {
-  box-sizing: border-box;
+button:hover:not(:disabled) {
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    background: black;
-    color: white;
-  }
+* {
+  box-sizing: border-box;
 }
